--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -44,6 +44,20 @@ body {
   }
  
   /* Image Grid */
+  .container > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    color: #ffeead;
+}
+
+.container > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
  .container {
   display: grid;
   grid-gap: 5px;
