--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -10,7 +10,7 @@ html {
   }
 
 body {
-      background: rgba(0, 0, 0, 1);;
+      background: linear-gradient(to right, black 0%,black 50%,#000000 50%, var(--gold) 50%, var(--gold) 100%);
       margin: 2% 2%;
       line-height: 1.2;
   }
@@ -23,7 +23,8 @@ body {
 .main-nav ul {
     display: grid;
     grid-gap: 20px;
-    padding: 0;
+    padding-top: 1%; 
+    padding-bottom: 1rem;
     list-style: none;
     grid-template-columns: repeat(3, 1fr);
   }
@@ -46,23 +47,23 @@ body {
   /* Image Grid */
   .container > div {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     font-size: 2em;
     color: #ffeead;
 }
 
 .container > div > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 50%;
+    height: 40%;
+    object-fit: scale-down;
 }
 
  .container {
   display: grid;
   grid-gap: 5px;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-auto-rows: 75px;
+  grid-auto-rows: 1500px; 
   grid-auto-flow: dense;
 }
 
@@ -71,7 +72,7 @@ body {
 }
 
 .vertical {
-  grid-row: span 2;
+  grid-row: span 0;
 }
 
 .big {
